# NuMaker-mbed-Azure-IoT-CSDK-PnP-example

./: CMakeLists.txt  README.md  mbed-client-for-azure.lib  mbed_app.json
hsm_custom/: custom_hsm_example.c
pnp/common/: pnp_device_client_ll.c  pnp_device_client_ll.h  pnp_dps_ll.c  pnp_dps_ll.h  pnp_protocol.h
pnp/pnp_numaker_iot_m487_dev/: pnp_deviceinfo_component.cpp  pnp_deviceinfo_component.h  pnp_motion_sensor_bmx055_component.cpp  pnp_motion_sensor_bmx055_component.h  pnp_numaker_iot_m487_dev.cpp
pnp/pnp_temperature_controller/: pnp_temperature_controller.cpp  pnp_thermostat_component.c
